Fix: fixed formatting issue on gameboard. Long title covered the upnext to the order was changed.

--- a/client/src/Components/GameBoard/gameBoard.css
+++ b/client/src/Components/GameBoard/gameBoard.css
@@ -9,6 +9,10 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  overflow-x: hidden;
   font-family: "Roboto", sans-serif;
 }
 
@@ -94,15 +98,29 @@ body {
   font-size: 0.65rem;
 }
 
+#gameboard-header-info {
+  position: absolute;
+  top: 10px;
+  width: 100%;
+  padding: 10px;
+}
+
+#quit-game {
+  font-size: 1.2em;
+  color: #F1EEE9;
+  background-color: rgb(205, 0, 0);
+  text-decoration: none;
+  border: 1px solid #15133C;
+  padding: 5px 10px;
+  border-radius: 4px;
+  transition: all 0.2s;
+}
+
 #upNext {
   width: 100%;
-  position: absolute;
-  top: 100px;
   font-size: 1.3em;
   font-family: "Mochiy Pop One", sans-serif;
   color: #15133C;
-  text-align: center;
-  margin-bottom: 10px;
 }
 #upNext span {
   color: #EC994B;
@@ -154,4 +172,10 @@ body {
 .column li .deactivated-button {
   background-color: #73777B;
   color: gray;
+}
+
+@media screen and (max-width: 800px) {
+  #gameboard-header-info {
+    width: 800px;
+  }
 }/*# sourceMappingURL=gameBoard.css.map */
