--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -24,7 +24,6 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    overflow-x: hidden;
     font-family: $primaryFont;
 }
 
